--- a/Gerichtszusammensetzung.tex
+++ b/Gerichtszusammensetzung.tex
@@ -305,7 +305,7 @@ Allerdings ist jeder Redebeitrag wie auch jedes Abstimmverhalten schon eine Bete
 Es gibt auch keinen Grund, einen Unterschied zwischen aktiver und passiver Unterhaltung zu machen, zudem das typischerweise im Nachhinein nicht beweisbar sein wird.
 Daher reicht letzlich doch wieder die Akkreditierung an dem Zusammentreffen des Organs für die Erfüllung des Tatbestands nach Nr.~4 in Verbindung mit Nr.~1.
 (Dies gilt natürlich auch entsprechend für die Varianten Nr.~2 und Nr.~3).
-Damit ist aber effektiv das eigene Landesschiedsgericht in jedem Verfahren, in dem der eigene Landesparteitag beteiligt ist handlungsunfähig und das Verfahren muss noch vor Eröffnung an ein anderes Landesschiedsgericht verwiesen werden.
+Damit ist aber effektiv das eigene Landesschiedsgericht in jedem Verfahren, in dem der eigene Landesparteitag beteiligt ist, handlungsunfähig und das Verfahren muss noch vor Eröffnung an ein anderes Landesschiedsgericht verwiesen werden.
 Für das Bundesschiedsgericht heißt das sogar, das Verfahren mit Beteiligung des Bundesparteitages niemals zur Eröffnung oder gar Verhandlung kommen dürfen.
 Diese Konsequenz, dass der Zugang zur Parteischiedsgerichtsbarkeit komplett entfällt, wiederspricht \S~14 Abs.~1 PartG, der fordert, dass gerade in solchen Fällen die Parteinterne Schiedergerichtsbarkeit zuständig ist.
 Im Fall der Landesschiedgerichte entfällt durch die konsequente Umgehung der Zuständigkeitsregelungen die Bestimmbarkeit des entscheidenden Richters: Zuerst muss immer erst das Bundesschiedsgericht nach freiem Ermessen das Verfahren verweisen.
