--- a/A_Schemata.tex
+++ b/A_Schemata.tex
@@ -55,7 +55,7 @@ Hierzu ausführlich: Kapitel~\ref{Anrufung}.
 \item Einführung in den Verfahrensgegenstand (Sachverhalt, ggf. vorläufige Rechtsauffassung)
 \item Anhörung der Parteien
 \item Anhörung und ggf. Befragung von Zeugen
-\item [im Falle von Ordnungsmaßnahmen] Letztes Wort des Betroffenen
+\item (im Falle von Ordnungsmaßnahmen) Letztes Wort des Betroffenen
 \item Urteilsverkündung bzw. Ankündigung des weiteren Verfahrens
 \end{enumerate}
 
