--- a/A_Vorlagen.tex
+++ b/A_Vorlagen.tex
@@ -154,25 +154,26 @@ Der Vorstand (der Piratenpartei [Gliederung]) verhängt gegen (Name), Mitgliedsn
 Er/Sie hat am 01.01.1970 seine Uhr nicht auf UNIX-Zeit umgestellt und damit gegen die Ordnung der Partei verstoßen.
 Dadurch wurden von seinem Computer falsche Daten zur Einberufung des Parteitages der Auslandsgruppe Salzburg verschickt.
 
-\section{Rechtsbehelfsbelehrung: Sofortige Beschwerde: Nichteröffnung}
+\section{Rechtsbehelfsbelehrungen}
+\subsection{Sofortige Beschwerde: Nichteröffnung}
 \label{Vorlage:RMB_Eröffnungsbeschwerde}
 Gegen die Ablehnung der Verfahrenseröffnung ist die sofortige Beschwerde mit einer Frist von 14~Tagen beim (Berufungsgericht mit Post- und E-Mail-Anschrift) zulässig, \S~8 Abs.~6 S.~3~SGO.\index[paridx]{SGO!8@\S~8!6@Abs.~6}
 
-\section{Rechtsbehelfsbelehrung: Berufung}
+\subsection{Berufung}
 \label{Vorlage:RMB_Berufung}
 Gegen dieses Urteil kann binnen (Berufungsfrist) beim (Berufungsgericht mit Post- und E-Mail-Anschrift) Berufung eingelegt werden.
 Die Berufung ist zu begründen.
 Der Berufungsschrit ist die angefochtene Entscheidung samt erstinstanzlichem Aktenzeichen (Aktenzeichen) beizufügen.
 
-\section{Rechtsbehelfsbelehrung: Widerspruch gegen einstweilige Anordnung)}
+\subsection{Widerspruch gegen einstweilige Anordnung)}
 \label{Vorlage:RMB_einstweilige}
 Gegen die einstweilige Anordnung kann innerhalb von 14~Tagen nach Bekanntgabe und Erhalt der Begründung beim erlassenden Schiedsgericht ([eigenes Schiedsgericht mit Post- und E-Mail-Anschrift]) Widerspruch erhoben werden, \S~11 Abs.~4 S.~1~SGO.\index[paridx]{SGO!11@\S~11!4@Abs.~4}
 Ein Widerspruch hat keine aufschiebende Wirkung, \S~11 Abs.~4 S.~2~SGO.\index[paridx]{SGO!\S~11!4@Abs.~4}
 
-\section{Rechtsbehelfsbelehrung: Befangenheitsentscheidung}
+\subsection{Befangenheitsentscheidung}
 \label{Vorlage:RMB_na}
 Vorsorglich weist das Gericht darauf hin, dass der Beschluss über den Ausschluss von Richter*innen wegen Befangenheit unanfechtbar ist, \S~5 Abs.~6 S.~1~SGO.\index[paridx]{SGO!5@\S~5!6@Abs.~6}
 
-\section{Rechtsbehelfsbelehrung: Ordnungsmaßnahme}
+\subsection{Ordnungsmaßnahme}
 Gegen diese Ordnungsmaßnahme ist gemäß \S~8 Abs.~1 S.~2~SGO\index[paridx]{SGO!8@\S~8!1@Abs.~1} der Einspruch vor dem (Landesschiedsgericht des Landesverbands des Mitglieds) zulässig.
 Gegen die Ablehnung ist die sofortige Beschwerde mit einer Frist von 14~Tagen zum nächsthöheren Schiedsgericht möglich.
