--- a/A_Vorlagen.tex
+++ b/A_Vorlagen.tex
@@ -80,7 +80,7 @@ Das Landesschiedsgericht hat weiterin beschlossen:
 \item Nach §~5~Abs.~5~S.~1~SGO steht es den Verfahrensbeteiligten frei, binnen \textbf{2~Wochen} die Ablehnung von Richtern wegen der Besorgnis der Befangenheit zu beantragen. Die Möglichkeit einer Ablehnung aus Gründen, die im Verfahren offenbar werden, bleibt davon unbenommen.
 \item Jeder Verfahrensbeteiligte kann eine Vertretung benennen. Der (Gliederungs)vorstand wird aufgefordert nach §~9~Abs.~3~S.~1~SGO einen Vertreter zu benennen.
 \item Dem Antragsgegner wird aufgegeben, auf das Klagevorbringen innerhalb von \textbf{2~Wochen} in Textform zu erwidern, wenn er sich gegen die Klage verteidigen will.
-\item [Im Fall von OM/PAV] Der (Antragsteller bei OM, Antragsgegner bei PAV) wird gebeten mitzuteilen, ob ein nichtöffentliches Verfahren geführt werden soll, \S~9 Abs.~4~SGO.\index[paridx]{SGO!9@\S~9!4@Abs.~4}
+\item (Im Fall von OM/PAV) Der (Antragsteller bei OM, Antragsgegner bei PAV) wird gebeten mitzuteilen, ob ein nichtöffentliches Verfahren geführt werden soll, \S~9 Abs.~4~SGO.\index[paridx]{SGO!9@\S~9!4@Abs.~4}
 \item Der Antragsteller erhält nach Eingang der Erwiderung \textbf{2~Wochen} zur Erwiderung.
 \item Die Kommunikation mit dem Schiedsgericht erfolgt grundsätzlich per E-Mail. Alle weitere Korrespondenz soll im Betreff das Aktenzeichen (Aktenzeichen) tragen.
 \item Das Landesschiedsgericht hat als Termin für die mündliche Verhandlung gemäß \S~10 Abs.~4 ff.~SGO\index[paridx]{SGO!10@\S~10!4@Abs.~4} den (Datum der geplanten mündlichen Verhandlung) vorgemerkt und bittet bereits jetzt um Stellungnahme zum Termin um baldestmöglich laden zu können.
