Formulierungsfail ausgebessert, Satz sollte dadurch verständlich werden

--- a/Gerichtszusammensetzung.tex
+++ b/Gerichtszusammensetzung.tex
@@ -302,7 +302,7 @@ Der Parteitag ist in der Piratenpartei typischerweise eine Mitgliederversammlung
 Dies hat zur Folge, das alle Mitglieder einer Gliederung Mitglieder des Organs Parteitags sind.
 Um Sinn und Zweck der unwiderleglichen Befangenheitsvermutung zu genügen und gleichzeitig nicht zu umfangreich Mitglieder auszuschließen, muss der Wortlaut aber auch hier wohl teleologisch reduziert werden: Nur Mitglieder, die tatsächlich an der betreffenen Entscheidung beteiligt waren, können Befangen sein.
 Allerdings ist jeder Redebeitrag wie auch jedes Abstimmverhalten schon eine Beteiligung. Das umfasst auch wieder die Enthaltung.
-Es gibt auch keinen Grund, einen Unterschied zwischen aktiver und passiver Unterhaltung zu machen, zudem das typischerweise im Nachhinein nicht beweisbar sein wird.
+Es gibt auch keinen Grund, einen Unterschied zwischen aktiver und passiver Beteiligung zu machen, zudem das typischerweise im Nachhinein nicht beweisbar sein wird.
 Daher reicht letzlich doch wieder die Akkreditierung an dem Zusammentreffen des Organs für die Erfüllung des Tatbestands nach Nr.~4 in Verbindung mit Nr.~1.
 (Dies gilt natürlich auch entsprechend für die Varianten Nr.~2 und Nr.~3).
 Damit ist aber effektiv das eigene Landesschiedsgericht in jedem Verfahren, in dem der eigene Landesparteitag beteiligt ist, handlungsunfähig und das Verfahren muss noch vor Eröffnung an ein anderes Landesschiedsgericht verwiesen werden.
