Anhänge: ToC-Bugfixes; Benennung

--- a/A_Schemata.tex
+++ b/A_Schemata.tex
@@ -1,6 +1,6 @@
 \chapterpreamble{\enquote{Die Definition des Wahnsinns ist, immer das selbe zu tun, und ein anderes Ergebnis zu erwarten.} -- u.a. Albert Einstein, Benjamin Franklin oder Mark Twain zugeschrieben.}
 
-\chapter{Anhang: Prüfungsschemata}
+\chapter{Prüfungsschemata}
 \label{Schemata}
 
 Die folgenden Schemata stellen zum einen eine Liste der Prüfungspunkte für den jeweiligen Fall dar, die zu einer vollumfassenden Prüfung durchdacht werden müssen.
