--- a/A_Vorlagen.tex
+++ b/A_Vorlagen.tex
@@ -1,6 +1,6 @@
 \chapterpreamble{\enquote{Das haben wir noch nie so gemacht. -- Wo kommen wir denn da hin? -- Da könnt ja jede*r kommen!} -- Der Dreisatz der Verwaltung.}
 
-\chapter{Anhang: Vorlagen}
+\chapter{Vorlagen}
 \label{Vorlage}
 Dieser Anhang enthält Formulierungsvorschläge für übliche Vorgänge.
 Der Übersichtlichkeit halber sind die Rechtsbehelfsbelehrungen separat gelistet.
