--- a/sghandbuch.sty
+++ b/sghandbuch.sty
@@ -8,6 +8,7 @@
 \RequirePackage{scrjura}
 \RequirePackage{titletoc}
 \RequirePackage[toctitles]{titlesec}
+\RequirePackage[titletoc,title]{appendix}
 \RequirePackage[hyperref=true]{scrhack}
 \RequirePackage[hidelinks]{hyperref}
 \RequirePackage{xpatch}
