--- a/sghandbuch.template.tex
+++ b/sghandbuch.template.tex
@@ -80,12 +80,14 @@ Eine Meinung zu haben gehört zum Berufsbild eines Richters.
 
 \input{Instanzenzug.tex}
 
+%\appendix
+\begin{appendices}
+	\input{A_Schemata.tex}
+
+	\input{A_Vorlagen.tex}
+\end{appendices}
+
 \appendix
-
-\input{A_Schemata.tex}
-
-\input{A_Vorlagen.tex}
-
 \backmatter
 \pagenumbering{roman}
 \togglecolumnmode
