Parteibezeichnung Berufung ergänzt

--- a/Urteilsaufbau.tex
+++ b/Urteilsaufbau.tex
@@ -16,6 +16,7 @@ Während gem. \S~11 Abs.~7~SGO\index[paridx]{SGO!11@\S~11!7@Abs.~7} lediglich di
 
 Anders als bei Urteilen des Europäischen Gerichtshofes oder z.B. französischen Gerichten oder Gerichten aus dem angelsächsischen Rechtsraum werden Urteile in Deutschland regelmäßig in \enquote{ganz normalem Fließtext} verfasst, d.h. als mehrere Sätze, in Absätze unterteilt, regelmäßig mit Zwischenüberschriften bzw. Nummerierung gegliedert.
 Die Parteien werden im Rahmen der Schiedsgerichtsordnung schlicht als \emph{Antragstellerinnen} und \emph{Antragsgegnerinnen} bezeichnet (nicht etwa als Klägerinnen und Beklagte); \enquote{Angeklagte}\footnote{Der Begriff stammt aus dem Strafrecht; die Verwendung innerhalb eines Schiedsgerichtsverfahrens verbietet sich.} kennt die SGO auch im Falle von Ordnungsmaßnahmen nicht.
+Im Falle einer Berufung sollten diese Bezeichnungen um die der \emph{Berufungsführerin} und der \emph{Berufungsgegnerin} ergänzt werden.
 Auch sonst sollte die Sprache möglichst einfach gehalten sein:
 Ein gutes Urteil kommt ohne komplexe Schachtelsätze aus.
 
