--- a/Anrufung.tex
+++ b/Anrufung.tex
@@ -35,7 +35,7 @@ Eine Klage ist grundsätzlich nur statthaft, wenn diese Anforderungen erfüllt s
 Das allererste dieser Kriterien ist die Benennung eines \index[idx]{Antragsteller|textbf} Antragstelllers bzw. einer Antragstellerin, andernorts auch Kläger bzw. Klägerin genannt.
 Die SGO kennt allerdings den Begriff Kläger bzw. Klägerin nicht, sondern nur den Begriff Antragsteller bzw. Antragstellerin, entsprechend wird auch dieser Begriff hier verwendet.
 Antragsteller bzw. Antragstellerin ist typischerweise der oder die Anrufende selbst.
-In einigen Fällen, typischerweise im Falle einer Anrufung durch einen Vorstand oder ein anderes Organen, kann der oder die Anrufende auch Vertreter bzw. Vertreterin des Antragstellers bzw. der Antragstellerin sein.
+In einigen Fällen, typischerweise im Falle einer Anrufung durch einen Vorstand oder ein anderes Organ, kann der oder die Anrufende auch Vertreter bzw. Vertreterin des Antragstellers bzw. der Antragstellerin sein.
 In jedem Fall muss aus der Anrufung klar identifizierbar hervorgehen, wer nun mit der Anrufung Rechte bzw. Ansprüche vor dem Schiedsgericht gegen eine andere Person gelten machen will.
 Dieser jemand ist der Antragsteller bzw. die Antragstellerin.
 
