ein absatz zur parteifähigkeit von aufstellungsversammlungen

--- a/Anrufung.tex
+++ b/Anrufung.tex
@@ -84,6 +84,13 @@ Während dies für Prozesse vor staatlichen Gerichten aufgrund der dortigen Rege
 Daher ist auch das Bundesschiedsgericht in seiner Rechtsprechung dazu übergegangen, die Parteifähigkeit der Partei und ihrer Gliederungen nur zu bejahen, wenn eine derartige Zurechnung nicht möglich ist.\footnote{Vgl. \cite[S. 4]{BSG1614HS}; Diese Rechsprechung fortführend \cite[S. 2]{BSG3815HS} m.w.N.}
 Die Partei und die Gliederungen kommen also nur als subsidiärer Antragsgegner bzw. Antragsgegnerin in Betracht.
 
+Bisher gibt es keine bekannten Fallgruppen, für die dies generell der Fall ist.
+Auch die Aufstellungsversammlungen, die zwar nicht zwingend Organe im Sinne des \S~9 BS\index[paridx]{BS!9@\S~9} sind, werden jedenfalls mindestens als Organe im Sinne des \S~8 Abs.~1 S.~1 SGO\index[paridx]{SGO!8@\S~8!1@Abs.~1} anzusehen sein.
+Dies liegt einerseits nahe, da schon \S~8 Abs.~7 SGO\index[paridx]{SGO!8@\S~8!7@Abs.~7} den Schiedsgerichten, die oft Organe im Sinne des \S~9 BS\index[paridx]{BS!9@\S~9} sind, die Parteifähigkeit abspricht und somit klar ist, dass die beiden Satzungsnormen unterschiedliche Organbegriffe haben, und andererseits auch das Parteiengesetz selbst schon unterschiedlichen Organbegriffe kennt und \S~9 BS\index[paridx]{BS!9@\S~9} dort den engeren Begriff gemäß \S~8 Abs.~2 PartG\index[paridx]{PartG!8@\S~8!2@Abs.~2} abbildet.
+\S~8 Abs.~1 S.~1 SGO\index[paridx]{SGO!8@\S~8!1@Abs.~1} greift also einen weiter gefassten Organbegriff auf, der grundsätzlich jede formalisierte Gruppe, die für und im Namen der Partei handelt, umfasst und somit auch Aufstellungsversammlungen miteinschließt.
+Die Regelung für die Vertretung von Verfahrensparteien in \S~9 Abs.~3 S.~2 SGO\index[paridx]{SGO!9@\S~9!3@Abs.~3} stützt diese Deutung, da diese schon nicht mehr von anderen Organen spricht, sondern von Mitgliederversammlungen, die gerade nicht zwingend Organe im Sinne des engeren Begriffes sein müssen.
+Und die Aufstellungsversammlungen der Piratenpartei sind in der Regel Mitgliederversammlungen, sodass diese Norm in der Regel anwendbar ist.
+
 \subsection{Anschrift}
 \label{Anrufung:Statthaftigkeit:Anschrift}
 Der Antragsteller muss seine eigene Anschrift sowie die des Antragsgegners angeben.
