--- a/Dokumentation.tex
+++ b/Dokumentation.tex
@@ -1,10 +1,13 @@
 % \begin{refsection}
-\chapterpreamble{Dokumentiert (vgl. \S~14~SGO\index[paridx]{SGO!14@\S~14}) werden Verfahrensakten und Urteile.
-Die Verfahrensakte umfasst sämtliche verfahrensrelevante Kommunikation des Gerichts mit den Parteien (und umgekehrt).
-Das umfasst auch Aktennotizen, die sich auf den Verfahrensverlauf beziehen (z.B. bei telefonisch gestellten Anträgen o.ä.).
-Interne Kommunikation des Gerichts, auch wertende Notizen einzelner Mitglieder des Gremiums, gehören nicht zur Verfahrensakte.
-Werden während Verfahren Tonaufzeichnungen angefertigt, sind diese zu löschen, sobald die Parteien das daraus angefertigte Protokoll erhalten und einen Monat keinen Widerspruch erhoben haben, \S~14 Abs.~3~SGO\index[paridx]{SGO!14@\S~14!3@Abs.~3}.
-Die Verfahrensakte ist fünf Jahre nach Abschluss des Verfahrens aufzubewahren, Urteile unbefristet, \S~14~Abs.~5~SGO\index[paridx]{SGO!14@\S~14!5@Abs.~5}.}
+%\chapterpreamble{Dokumentiert (vgl. \S~14~SGO\index[paridx]{SGO!14@\S~14}) werden Verfahrensakten und Urteile.
+%Die Verfahrensakte umfasst sämtliche verfahrensrelevante Kommunikation des Gerichts mit den Parteien (und umgekehrt).
+%Das umfasst auch Aktennotizen, die sich auf den Verfahrensverlauf beziehen (z.B. bei telefonisch gestellten Anträgen o.ä.).
+%Interne Kommunikation des Gerichts, auch wertende Notizen einzelner Mitglieder des Gremiums, gehören nicht zur Verfahrensakte.
+%Werden während Verfahren Tonaufzeichnungen angefertigt, sind diese zu löschen, sobald die Parteien das daraus angefertigte Protokoll erhalten und einen Monat keinen Widerspruch erhoben haben, \S~14 Abs.~3~SGO\index[paridx]{SGO!14@\S~14!3@Abs.~3}.
+%Die Verfahrensakte ist fünf Jahre nach Abschluss des Verfahrens aufzubewahren, Urteile unbefristet, \S~14~Abs.~5~SGO\index[paridx]{SGO!14@\S~14!5@Abs.~5}.}
+\chapterpreamble{Sir~James~Norrington: \enquote{Ihr seid der schlechteste Pirat, von dem ich je gehört habe.}\\
+Jack~Sparrow: \enquote{Aber Ihr habt von mir gehört!}\\
+--~Fluch der Karibik (US, 2003)}
 
 % ToDo: Aktenführung (formal): Was gehört in die Akte, wie baut man sie auf, Formate etc.
 
