--- a/Einleitung.tex
+++ b/Einleitung.tex
@@ -41,7 +41,7 @@ Den noch nicht fertiggestellten Kapitel haben wir --- gewissermaßen als vorläu
 
 \vspace{20mm}
 
-Simon Gauseweg\\
+Simon Gauseweg, LL.B.\\
 Vorsitzender Richter am Landesschiedsgericht Brandenburg
 
 \vspace{5mm}
