Fußnote zur Norm-Zitierweise  erweitert.

--- a/Normenauslegung.tex
+++ b/Normenauslegung.tex
@@ -35,7 +35,7 @@ Teilweise bietet es sich an, Sätze als Halbsätze, Alternativen oder Varianten 
 Da der Paragraph (Artikel) die wichtigste Gliederungsebene ist, ist er der Ausgangspunkt eines jeden Normzitats.
 Von ihm ausgehend wird \enquote{nach unten}, d.h. nach Absätzen, Sätzen, Nummern usw. zitiert.
 Je genauer der betreffende Abschnitt durch das Zitat benannt wird, desto leichter lässt er sich durch den Leser wiederfinden – es gilt: \Zitat{Viel hilft viel}!
-Erst am Ende wird das jeweilige Regelwerk benannt, dem der Paragraph entstammt.\footnote{Das \enquote{Quellregelwerk} erst am Ende zu benennen, mag der Ordnung des Zitats – \Zitat{vom Großen ins Kleine} – widersprechen, findet jedoch im juristischen Gebrauch absolute Verbreitung.}
+Erst am Ende wird das jeweilige Regelwerk benannt, dem der Paragraph entstammt.\footnote{Das \enquote{Quellregelwerk} erst am Ende zu benennen, mag der Ordnung des Zitats – \Zitat{vom Großen ins Kleine} – widersprechen, findet jedoch im juristischen Gebrauch absolute Verbreitung. Explizit vorgegeben ist diese Ordnung z.B. in \S~260 Abs.~5 S.~1~StPO.\index[paridx]{StPO!260@\S~260!5@Abs.~5}}
 Die Gliederungsebenen zwischen der Ebene \enquote{Regelwerk} und der Ebene \enquote{Paragraph} werden nicht mitzitiert, da sie lediglich der systematischen Übersicht dienen; die Nennung von Regelwerk und nummeriertem Paragraphen reicht zur Auffindung bereits aus.\footnote{Es gibt daher auch keine vereinheitlichen Regeln über Verwendung oder gar Rangfolge dieser reinen \enquote{Gliederungsebenen}; sie können vom jeweiligen Gesetz- bzw. Satzungsgeber völlig frei verwendet werden.}
 
 \textbf{Beispiel:} \S~9a Abs.~9 S.~2 Hs.~2~BS\nomenclature{Abs.}{Absatz}\nomenclature{S.}{Satz}\nomenclature{Hs.}{Halbsatz}\index[paridx]{BS!9@\S~9a!9@Abs.~9} (Paragraph~9a Absatz~9 Satz~2 Halbsatz~2 der Bundessatzung) schreibt vor, dass jedes Bundesvorstandsmitglied bei der Abfassung des Tätigkeitsberichts die Verantwortung für seine eigenen Tätigkeitsbereiche trägt. 
