--- a/Dokumentation.tex
+++ b/Dokumentation.tex
@@ -44,7 +44,12 @@ Soweit die Akte aus einzelnen Dateien besteht, empfiehlt sich der Übersicht hal
 
 Die Verfahrensakte ist nach Abschluss des Verfahrens 5~Jahre aufzubewahren, \S~14 Abs.~5 S.~1~SGO.\index[paridx]{SGO!14@\S~14!5@Abs.~5}
 Das ist auch elektronisch möglich, bspw. im ohnehin verwendeten Ticket-System oder als konsolidiertes PDF.
-Die Akte ist gegen unbefugten Zugriff zu sichern; neben dem jeweils amtierenden Gericht haben nur die jeweiligen Verfahrensparteien das Recht auf Akteneinsicht, \S~14 Abs.~4~SGO.\footnote{Das Recht der Akteneinsicht für Verfahrensparteien ist indes uneingeschränkt; nur eine unvollständige Akte zur Verfügung zu stellen oder gar Schwärzungen vorzunehmen, ist unzulässig.}\index[paridx]{SGO!14@\S~14!4@Abs.~4}
+
+Die Akte ist gegen unbefugten Zugriff zu sichern; neben dem jeweils amtierenden Gericht haben nur die jeweiligen Verfahrensparteien das Recht auf Akteneinsicht, \S~14 Abs.~4~SGO.\index[paridx]{SGO!14@\S~14!4@Abs.~4}
+Das Recht der Akteneinsicht für Verfahrensparteien ist uneingeschränkt; nur eine unvollständige Akte zur Verfügung zu stellen oder gar Schwärzungen vorzunehmen, ist unzulässig.
+Ebenso endet das Recht auf Akteneinsicht nicht mit dem Ende des Verfahrens.
+Das wird bereits daran deutlich, dass im laufenden Verfahren die Parteien bereits aufgrund von \S~10 Abs.~1 S.~3~SGO\index[paridx]{SGO!10@\S~10!1@Abs.~1} Zugriff auf die Verfahrensakte erhalten.
+
 Nach Ablauf der Aufbewahrungsfrist ist die Akte (mit Ausnahme des Urteils, \S~14 Abs.~5 S.~2~SGO),\index[paridx]{SGO!14@\S~14!5@Abs.~5} zu vernichten bzw. zu löschen.
 
 \section{Protokolle}
